add all tests and models